--- a/src/pages/experiencias.css
+++ b/src/pages/experiencias.css
@@ -67,10 +67,8 @@
 
 .expSlideVideo{
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
     width: 100%;
+    height: 80%;
 }
 
 .fade{
@@ -79,5 +77,4 @@
 
 .listaCampamento{
     list-style: none;
-    margin-top: 50px;
 }
