--- a/src/pages/experiencias/actividad.css
+++ b/src/pages/experiencias/actividad.css
@@ -19,7 +19,7 @@
 .actSlide{
     display: flex;
     width: 100%;
-    height: 100%;
+    height: 80%;
 }
 
 .actSlide > div{
@@ -40,8 +40,15 @@
 
 .actSlideVideo{
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
     width: 100%;
+    height: 80%;
+}
+
+.fade{
+    align-self: center;
+}
+
+.listaCampamento{
+    list-style: none;
+    margin-top: 0;
 }
