--- a/src/pages/experiencias/creatividad.css
+++ b/src/pages/experiencias/creatividad.css
@@ -19,21 +19,19 @@
 .creSlide{
     display: flex;
     width: 100%;
-    height: 100%;
+    height: 80%;
 }
 
 .creSlide > div{
     width: 100%;
 }
 
-.creSlideContainerVideo{
-    position: sticky;
-    margin: auto;
-    width: 38%;
-}
-
 .creSlideImg{
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+
+.fade{
+    align-self: center;
 }
