--- a/src/pages/experiencias/servicio.css
+++ b/src/pages/experiencias/servicio.css
@@ -19,7 +19,7 @@
 .serSlide{
     display: flex;
     width: 100%;
-    height: 100%;
+    height: 80%;
 }
 
 .serSlide > div{
@@ -37,10 +37,13 @@
     height: 100%;
     object-fit: cover;
 }
+
 .serSlideVideo{
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
     width: 100%;
+    height: 80%;
+}
+
+.fade{
+    align-self: center;
 }
