Empezamos a actualizar para diseño responsivo

--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -1,28 +1,19 @@
 .footer{
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
     background-color: rgb(133, 203, 231);
     text-align: center;
     float: left;
     margin: 0;
     width: 100%;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
     color: white;
+}
+
+.footerDato{
+    padding: 15px;
 }
 
 .footerLista {
     list-style: none;
-    text-align: center;
-}
-
-.footerLista li {
-    padding: 0.5rem 1rem;
-    text-align: center;
-}
-
-.footerLink:hover{
-    color: black;
-}
-
-.footerNav{
-    bottom: 0;
 }
