--- a/src/pages/inicio.css
+++ b/src/pages/inicio.css
@@ -1,41 +1,22 @@
 .imgInicio{
-    width: 80%;
-    display: inline;
+    width: 100%;
+}
+
+.inicio{
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    margin-top: 150px;
 }
 
 .h1Header{
-    display: block;
     font-size: 80px;
     font-family: 'Pompiere';
+    text-align: center;
 }
 
 .h1Nombre{
     font-family: 'Amatic SC';
     background-color: rgb(133, 203, 231);
     font-size: 40px;
-}
-
-.inicio{
-    margin-top: 150px;
-}
-
-.tableHeader{
-    margin-top: 50px;
-    width: 100%;
-    text-align: center;
-    padding-right: 100px;
-    line-height: 40px;
-}
-
-.tableImg{
-    width: 50%;
-    height: 100%;
-}
-
-td{
-    padding-right: 30px;
-}
-
-.footer{
-    bottom: 0;
 }
