--- a/src/pages/experiencias.css
+++ b/src/pages/experiencias.css
@@ -4,16 +4,15 @@
 }
 
 .expTitulo{
-    font-size: 90px;
+    /* width: 100%;
+    font-size: auto;
+    font-size: 5vw;
+    margin: auto;
     margin-top: 120px;
-    width: 100%;
-    margin-bottom: 50px;
+    margin-bottom: 50px; */
 }
 
 .expNav{
-    display: flex;
-    justify-content: center;
-    align-items: center;
     gap: 1rem;
     list-style: none;
     background-color: rgb(133, 203, 231);
@@ -25,11 +24,17 @@
     border-radius: 20px;
 }
 
+.expLista{
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    list-style: none;
+}
+
 .expEnlace{
     color: white;
     width: 100%;
     text-decoration: none;
-    margin-right: 37px;
     cursor: pointer;
 }
 
@@ -38,6 +43,35 @@
 }
 
 .expSlideContainer{
+    display: flex;
+    height: 20rem;
+    gap: 1rem;
+    width: 20%;
+    margin: auto;
+}
+
+.expSlide{
+    flex: 1;
+    border-radius: 1rem;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: auto 100%;
+    transition: all .8s cubic-bezier(.25, .4, .45, 1.4);
+}
+
+.expSlide:hover{
+    flex: 5;
+}
+
+.expSlideContainerVideo{
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    width: 80%;
+    margin: auto;
+}
+
+/* .expSlideContainer{
     position: sticky;
     margin: auto;
     width: 20%;
@@ -78,3 +112,7 @@
 .listaCampamento{
     list-style: none;
 }
+
+.expParrafo{
+    font-size: 1vw;
+} */
