--- a/src/components/nav.css
+++ b/src/components/nav.css
@@ -5,16 +5,24 @@
     z-index: 1;
 }
 
+.favicon{
+    display: flex;
+    position: absolute;
+    width: 40px;
+    top: 10px;
+    left: 10px;
+}
+
 .lista{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     flex-wrap: wrap;
     align-items: center;
     list-style: none;
     background-color: rgb(133, 203, 231);
     width: 100%;
-    padding-top: 15px;
-    padding-bottom: 10px;
+    padding-top: 20px;
+    padding-bottom: 15px;
 }
 
 .menuDesp {
@@ -27,14 +35,12 @@
 }
 
 .desp {
-    background-color: white;
-    margin: 0;
-    padding-left: 0;
-    position: absolute;
-    left: 0;
-    top: 100%;
     display: none;
+    position: absolute;
     background-color: rgb(133, 203, 231);
+    min-width: 160px;
+    box-shadow: 0px 0px 20px 3px black;
+    padding: 12px 16px;
 }
 
 .desp li {
@@ -67,4 +73,58 @@
     bottom: 40px;
     right: 40px;
     z-index: 99;
+}
+
+.iconoLista{
+    background-color: rgb(133, 203, 231);
+    display: none;
+}
+
+@media screen and (max-width: 600px) {
+    .iconoLista{
+        display: flex;
+        position: relative;
+        text-align: right;
+        justify-content: flex-end;
+        width: 100%;
+        list-style: none;
+    }
+    .iconoMenu{
+        width: 40%;
+        cursor: pointer;
+    }
+
+    .menuDespIcono {
+        position: relative;
+        margin-right: 10px;
+    }
+
+    .despIcono {
+        display: none;
+        position: absolute;
+        background-color: rgb(133, 203, 231);
+        min-width: 160px;
+        box-shadow: 0px 0px 20px 3px black;
+        padding: 12px 16px;
+    }
+    
+    .despIcono li {
+        list-style: none;
+        text-align: center;
+        margin-bottom: 5px;
+    }
+
+    .menuDespIcono:hover .despIcono {
+        display: block;
+        opacity: 1;
+        transform: translate(-20px);
+    }
+    
+    .desp{
+        transform: translate(-155px, -30px);
+    }
+
+    .lista{
+        display: none;
+    }
 }
