--- a/src/pages/experiencias.css
+++ b/src/pages/experiencias.css
@@ -1,15 +1,14 @@
 .experiencias{
     text-align: center;
-    margin: 7%;
+    margin: 2%;
+    margin-top: 100px;
 }
 
 .expTitulo{
-    /* width: 100%;
-    font-size: auto;
-    font-size: 5vw;
-    margin: auto;
+    font-size: 80px;
     margin-top: 120px;
-    margin-bottom: 50px; */
+    width: 100%;
+    margin-bottom: 50px;
 }
 
 .expNav{
@@ -19,9 +18,10 @@
     margin: auto;
     margin-bottom: 80px;
     padding-top: 15px;
-    padding-bottom: 15px;
+    padding-bottom: 5px;
     width: 70%;
     border-radius: 20px;
+    box-shadow: 0px 8px 16px 0px black;
 }
 
 .expLista{
@@ -44,9 +44,9 @@
 
 .expSlideContainer{
     display: flex;
-    height: 20rem;
+    height: 40rem;
     gap: 1rem;
-    width: 20%;
+    width: 40%;
     margin: auto;
 }
 
@@ -63,56 +63,6 @@
     flex: 5;
 }
 
-.expSlideContainerVideo{
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    width: 80%;
-    margin: auto;
-}
-
-/* .expSlideContainer{
-    position: sticky;
-    margin: auto;
-    width: 20%;
-}
-
-.expSlide{
-    display: flex;
-    width: 100%;
-    height: 80%;
-}
-
-.expSlide > div{
-    width: 100%;
-}
-
-.expSlideContainerVideo{
-    position: sticky;
-    margin: auto;
-    width: 38%;
-}
-
-.expSlideImg{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
-.expSlideVideo{
-    display: flex;
-    width: 100%;
-    height: 80%;
-}
-
-.fade{
-    align-self: center;
-}
-
 .listaCampamento{
     list-style: none;
 }
-
-.expParrafo{
-    font-size: 1vw;
-} */
