--- a/src/pages/experiencias/creatividad.css
+++ b/src/pages/experiencias/creatividad.css
@@ -1,6 +1,7 @@
 .creatividad{
     text-align: center;
-    margin: 7%;
+    margin: 2%;
+    margin-top: 100px;
 }
 
 .creTitulo{
@@ -11,27 +12,22 @@
 }
 
 .creSlideContainer{
-    position: sticky;
+    display: flex;
+    height: 40rem;
+    gap: 1rem;
+    width: 40%;
     margin: auto;
-    width: 20%;
 }
 
 .creSlide{
-    display: flex;
-    width: 100%;
-    height: 80%;
+    flex: 1;
+    border-radius: 1rem;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: auto 100%;
+    transition: all .8s cubic-bezier(.25, .4, .45, 1.4);
 }
 
-.creSlide > div{
-    width: 100%;
-}
-
-.creSlideImg{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
-.fade{
-    align-self: center;
+.creSlide:hover{
+    flex: 5;
 }
