--- a/src/pages/inicio.css
+++ b/src/pages/inicio.css
@@ -1,5 +1,6 @@
 .imgInicio{
     width: 100%;
+    box-shadow: 0px 0px 20px 3px black;
 }
 
 .inicio{
@@ -19,4 +20,5 @@
     font-family: 'Amatic SC';
     background-color: rgb(133, 203, 231);
     font-size: 40px;
+    text-align: center;
 }
