--- a/src/pages/perfil.css
+++ b/src/pages/perfil.css
@@ -1,12 +1,7 @@
 .perfil{
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    flex-wrap: wrap;
     text-align: center;
-    margin-left: 200px;
-    margin-right: 200px;
-    margin-top: 150px;
+    margin: 2%;
+    margin-top: 100px;
 }
 
 .perTitulo{
@@ -29,9 +24,7 @@ div{
 }
 
 .imgPerfil{
-    width: 40%;
+    width: 50%;
+    /* height: 100%; */
     border-radius: 20px;
-}
-
-.descripcion{
 }
