--- a/src/pages/queEsCAS.css
+++ b/src/pages/queEsCAS.css
@@ -1,9 +1,14 @@
 .queEsCAS{
-    margin: 154px;
-    margin-top: 100px;
+    text-align: center;
+    margin: 2%;
+    margin-top: 5%;
 }
 
 .cabecera{
     text-align: center;
     margin-top: 50px;
+}
+
+.punto{
+    list-style: none;
 }
